; ModuleID = '/home/carl/AnghaBench/linux/drivers/watchdog/extr_it8712f_wdt.c_it8712f_wdt_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/watchdog/extr_it8712f_wdt.c_it8712f_wdt_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [25 x i8] c"enabling watchdog timer\0A\00", align 1
@LDN_GPIO = common dso_local global i32 0, align 4
@wdt_control_reg = common dso_local global i32 0, align 4
@WDT_CONTROL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @it8712f_wdt_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @it8712f_wdt_enable() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 (...) @superio_enter()
  store i32 %3, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = load i32, i32* %2, align 4
  store i32 %7, i32* %1, align 4
  br label %18

8:                                                ; preds = %0
  %9 = call i32 @pr_debug(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  %10 = load i32, i32* @LDN_GPIO, align 4
  %11 = call i32 @superio_select(i32 %10)
  %12 = load i32, i32* @wdt_control_reg, align 4
  %13 = load i32, i32* @WDT_CONTROL, align 4
  %14 = call i32 @superio_outb(i32 %12, i32 %13)
  %15 = call i32 (...) @it8712f_wdt_update_margin()
  %16 = call i32 (...) @superio_exit()
  %17 = call i32 (...) @it8712f_wdt_ping()
  store i32 0, i32* %1, align 4
  br label %18

18:                                               ; preds = %8, %6
  %19 = load i32, i32* %1, align 4
  ret i32 %19
}

declare dso_local i32 @superio_enter(...) #1

declare dso_local i32 @pr_debug(i8*) #1

declare dso_local i32 @superio_select(i32) #1

declare dso_local i32 @superio_outb(i32, i32) #1

declare dso_local i32 @it8712f_wdt_update_margin(...) #1

declare dso_local i32 @superio_exit(...) #1

declare dso_local i32 @it8712f_wdt_ping(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
